--- a/css/style.css
+++ b/css/style.css
@@ -237,7 +237,7 @@ a {
   font-size: 18px;
   line-height: 16px;
 }
-/*
+
 .form-order {
   background-color: var(--light-beige);
   box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.4);
@@ -246,7 +246,7 @@ a {
   flex-direction: column;
   margin: 0;
   padding: 0;
-} */
+}
 
 
 .form-order-list {
